<resources>
    <string name="app_name">BudgetApp</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string-array name="expense_categories">
        <item>Dining-out</item>
        <item>Leisure</item>
        <item>Transportation</item>
        <item>Income</item>
    </string-array>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_spending_graph">SpendingGraph</string>
    <string name="add_expense">Add expense</string>
    <string name="add_position">Add position</string>
    <string name="summary">Summary </string>
    <string name="add_income">Add income</string>
    <string name="location">Location</string>
    <string name="set_date">Set Date</string>
    <string name="amount">Amount</string>
    <string name="date">Date</string>
    <string name="type">Type</string>
</resources>